# eosio.cdt

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  build.sh  eosio.imports.in  install.sh  uninstall.sh
.buildkite/: pipeline.yml
.buildkite/steps/: .build-image.sh.swp  build-image.sh  publish-image.sh  upload-image.sh
docker/: Dockerfile  install_deb.sh
docs/: DoxygenLayout.xml  footer.html  main_page.md  new_customdoxygen.css  new_footer.html
docs/cdt_specifics/: cyberway_cdt_specifics.md  no_ricardian_contracts.md
docs/guides/: abi-generator-attributes.md  cmake.md  first-smart-contract.md  generator-attributes.md  native-tester.md  no_ricardian_contracts.md  upgrading-from-1.2-to-1.3.md
docs/html/: new_customdoxygen.css
docs/tools/: cyberway-abidiff.md  cyberway-cpp.md  cyberway.eosio-abidiff.md  cyberway.eosio-abigen.md  cyberway.eosio-cpp.md  cyberway.eosio-init.md  cyberway.eosio-ld.md  eosio-abigen.md  eosio-init.md  eosio-ld.md
docs/upgrading/: 1.2-to-1.3.md  1.5-to-1.6.md
examples/: CMakeLists.txt
examples/hello/: CMakeLists.txt
examples/hello/src/: CMakeLists.txt
examples/hello/tests/: CMakeLists.txt
examples/multi_index_example/: CMakeLists.txt
examples/multi_index_example/src/: CMakeLists.txt
examples/provide.ram/: CMakeLists.txt  receiver.ram.abi  receiver.ram.cpp
examples/request.bw/: CMakeLists.txt  main.pw.cpp  provider.abi  second.fail.pw.abi  second.fail.pw.cpp  second.pw.cpp  second.vrf.pw.abi  second.vrf.pw.cpp
examples/request.ram/: CMakeLists.txt
examples/request.ram/include/: mainrampw.hpp  ram_approver.hpp  sec_base_provider.hpp  secram_dup_confirm.hpp  secram_no_confirm.hpp  secram_part_confirm.hpp  secrampw.hpp
examples/request.ram/src/: CMakeLists.txt  mainrampw.cpp  ram_approver.cpp  sec_base_provider.cpp  secram_dup_confirm.cpp  secram_no_confirm.cpp  secram_part_confirm.cpp  secrampw.cpp
examples/send_inline/: CMakeLists.txt
examples/send_inline/src/: CMakeLists.txt
imports/: eosio.imports.in
libraries/: CMakeLists.txt
libraries/eosiolib/: action.h  action.hpp  archive.h  archive.hpp  bandwith.h  bandwith.hpp  chaindb.h  domain.h  domain.hpp  eosiolib.cpp  event.h  event.hpp  multi_index.hpp  privileged.h  privileged.hpp  ram.h  ram.hpp  singleton.hpp  transaction.hpp
libraries/eosiolib/capi/eosio/: action.h  chain.h  chaindb.h  crypto.h  domain.h  event.h  permission.h  print.h  privileged.h  system.h  transaction.h  types.h
libraries/eosiolib/contracts/eosio/: action.hpp  contract.hpp  dispatcher.hpp  domain.hpp  eosio.hpp  event.hpp  multi_index.hpp  permission.hpp  privileged.hpp  singleton.hpp  system.hpp  transaction.hpp
libraries/eosiolib/core/eosio/: asset.hpp  binary_extension.hpp  check.hpp  crypto.hpp  datastream.hpp  fixed_bytes.hpp  ignore.hpp  name.hpp  print.hpp  symbol.hpp  time.hpp  varint.hpp
libraries/native/: intrinsics.cpp  intrinsics_def.hpp
libraries/native/native/eosio/: intrinsics_def.hpp
modules/: EosioCDTMacros.cmake.in  EosioWasmToolchain.cmake.in  InstallCDT.cmake  LibrariesExternalProject.txt  TestsExternalProject.txt  eosio.cdt-config.cmake
scripts/: eosio_build_centos.sh  eosio_build_fedora.sh  eosio_build_ubuntu.sh  generate_bottle.sh  generate_tarball.sh
tests/unit/: CMakeLists.txt  asset_tests.cpp  symbol_tests.cpp
tests/unit/test_contracts/: simple_wrong.abi
tools/: CMakeLists.txt
tools/abidiff/: CMakeLists.txt  cyberway-abidiff.cpp.in  eosio-abidiff.cpp.in
tools/abigen/: eosio-abigen.cpp.in
tools/cc/: CMakeLists.txt  cyberway-cpp.cpp.in  eosio-cpp.cpp.in
tools/cyberway-abigen/: CMakeLists.txt  cyberway-abigen.cpp.in
tools/cyberway-cc/: CMakeLists.txt  cyberway-cpp.cpp.in
tools/include/eosio/: abi.hpp  abigen.hpp  abimerge.hpp  codegen.hpp  gen.hpp
tools/init/: eosio-init.cpp
